k8s/ai-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ai-ms
  name: ai-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ai-ms
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: ai-ms
    spec:
      containers:
        - image: us-west1-docker.pkg.dev/siasu-440922/siasu-cr/ai-ms
          imagePullPolicy: Always
          name: ai-ms
          ports:
            - containerPort: 8001
              protocol: TCP
      restartPolicy: Always
