k8s/auth-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: auth-ms
  name: auth-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-ms
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: auth-ms
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: siasu-secrets
          image: us-west1-docker.pkg.dev/siasu-440922/siasu-cr/auth-ms
          imagePullPolicy: IfNotPresent
          name: auth-ms
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always
