k8s/comments-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: comments-ms
  name: comments-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: comments-ms
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: comments-ms
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: siasu-secrets
          image: comments-ms
          imagePullPolicy: Never
          name: comments-ms
          ports:
            - containerPort: 4520
              protocol: TCP
      restartPolicy: Always
