k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - image: us-west1-docker.pkg.dev/siasu-440922/siasu-cr/gateway
          imagePullPolicy: IfNotPresent
          name: gateway
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
