k8s/logic-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: logic-ms
  name: logic-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logic-ms
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: logic-ms
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: "postgresql://postgres:cisco123@postgres:5432/siasu?schema=public"
          image: logic-ms
          imagePullPolicy: Never
          name: logic-ms
          ports:
            - containerPort: 4530
              protocol: TCP
      restartPolicy: Always
