k8s/responses-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: responses-ms
  name: responses-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: responses-ms
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: responses-ms
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: "mongodb://admin:cisco123@mongodb:27017"
          image: responses-ms
          imagePullPolicy: Never
          name: responses-ms
          ports:
            - containerPort: 4510
              protocol: TCP
      restartPolicy: Always
