k8s/utils-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: utils-ms
  name: utils-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: utils-ms
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: utils-ms
    spec:
      containers:
        - image: us-west1-docker.pkg.dev/siasu-440922/siasu-cr/utils-ms
          name: utils-ms
          ports:
            - containerPort: 8000
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
